--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     git:
       url: https://github.com/Feichtmeier/audio-service-mpris
       ref: ad6f743b73e320670449026fa1852d9978438bb9
+  basic_utils: ^5.8.2
   blur: ^4.0.2
   cached_network_image: ^3.4.1
   collection: ^1.19.1
@@ -56,6 +57,7 @@ dependencies:
   radio_browser_api: ^2.0.0+1
   safe_change_notifier: ^0.4.0+1
   shared_preferences: ^2.5.3
+  synchronized: ^3.4.0
   system_theme: ^3.1.2
   url_launcher: ^6.3.2
 
