--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_tabler_icons: ^1.43.0
   flutter_widget_from_html_core: ^0.17.0
   future_loading_dialog: ^0.3.0
+  handy_window: ^0.4.0
   html: ^0.15.6
   intl: ^0.20.2
   local_notifier: ^0.1.6
